2005-06-27  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.getSequence): only
	log that the sequence name is being inferred when self.verbose.

	* tests/test_base.py (test_unique3) test for _matchUnique.

	* src/pydo/base.py (PyDO._matchUnique): fixing brain-dead
	implementation, which was dropping some unique constraints.

2005-06-26  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py (test_refresh2): another refresh test in
	attempt to find Faber's bug.

2005-06-25  Jacob Smullyan  <smulloni@smullyan.org>

	* TODO: put iterSome in the TODO for 1.1.  (It is being deferred
	because of it may require a generator that can do resource
	cleanup.)

	* tests/fixture.py: another table/class ("E").

	* tests/test_base.py (test_project8): test for when projections
	include columns not included in the base class.  Commented out is 
	Faber's sneaky aggregate trick.

	* src/pydo/base.py: missing a "not" was breaking uniqueness
	constraints for projections.
 
	* tests/test_base.py (test_project7): test for bug reported by
	Faber (Fabio Vescarelli) -- uniqueness constraints were getting
	lost on projections.

2005-06-24  Jacob Smullyan  <smulloni@smullyan.org>

	* MANIFEST.in: fix to include testingtesting.py in tarball.

	* src/pydo/__init__.py (__version__): version number bumped up to
	2.0b0 in preparation for release.

	* tests/test_dbi.py (test_pool1): test for connection pool.

2005-06-23  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/dbi.py: removed unused import.
	(ConnectionPool.release): fix for connection pool (wrong logic for
	keeping connections).

2005-06-22  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst, src/pydo/base.py (autoschema): change
	"locals().update" to "globals().update" in docstring of autoschema
	and corresponding manual documentation  (updating locals is bAAAAd.)

2005-06-21  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/fixture.py: moved base_fixture here from test_base.
