@@ -50,4 +50,25 @@ class test_fetch1(base_fixture):
             a, b=r
             assert isinstance(a, self.A)
             assert isinstance(b, self.B)
-              
+
+
+class test_fetch2(base_fixture):
+    tags=alltags
+    alltables=['C']
+
+    def pre(self):
+        for n in (0, 20, 40, 60, 77, 77, 77, 77):
+            self.C.new(x=n)
+
+    def run(self):
+        objs=[self.C.project('x'), 'count(id)as rubberducky']
+        sql="""
+        SELECT $COLUMNS FROM $TABLES
+        GROUP BY x HAVING x=77
+        """
+        res=P.fetch(objs, sql)
+        assert len(res)==1
+        cobj, cnt=res[0]
+        assert cobj.x==77
+        assert int(cnt)==4
+        
